cluster/eu-de-01/udl/fastdl/fastdl.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastdl
  namespace: udl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastdl
  template:
    metadata:
      labels:
        app: fastdl
    spec:
      securityContext:
        fsGroup: 33 # www-data group
      containers:
        - name: http-server
          image: php:8.2-apache
          ports:
            - containerPort: 80
          securityContext:
            runAsUser: 33 # www-data user
            runAsGroup: 33 # www-data group
          volumeMounts:
            - name: fastdl-content
              mountPath: /var/www/html
            - name: apache-config
              mountPath: /etc/apache2/sites-available/000-default.conf
              subPath: 000-default.conf
            - name: serve-php
              mountPath: /var/www/html/serve.php
              subPath: serve.php
      volumes:
        - name: fastdl-content
          hostPath:
            path: /mnt/fastdl
            type: DirectoryOrCreate
        - name: apache-config
          configMap:
            name: apache-config
        - name: serve-php
          secret:
            secretName: serve-php
