cluster/eu-de-01/udl/fastdl/fastdl.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastdl
  namespace: udl
spec:
  selector:
    app: fastdl
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
